lai-yang fix